--- a/.classpath
+++ b/.classpath
@@ -4,14 +4,14 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-client-9.0.5.v20130815.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-http-9.0.5.v20130815.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-io-9.0.5.v20130815.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-proxy-9.0.5.v20130815.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-server-9.0.5.v20130815.jar" sourcepath="T:/sandbox/t06/jetty-all-9.0.5.v20130815-sources.zip"/>
-	<classpathentry kind="lib" path="lib/jetty-servlet-9.0.5.v20130815.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-util-9.0.5.v20130815.jar" sourcepath="T:/sandbox/t06/jetty-all-9.0.5.v20130815-sources.jar"/>
-	<classpathentry kind="lib" path="lib/servlet-api-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-client-9.0.5.v20130815.jar" sourcepath="lib/sources/jetty-client-9.0.5.v20130815-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-http-9.0.5.v20130815.jar" sourcepath="lib/sources/jetty-http-9.0.5.v20130815-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-io-9.0.5.v20130815.jar" sourcepath="lib/sources/jetty-io-9.0.5.v20130815-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-proxy-9.0.5.v20130815.jar" sourcepath="lib/sources/jetty-proxy-9.0.5.v20130815-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-server-9.0.5.v20130815.jar" sourcepath="lib/sources/jetty-server-9.0.5.v20130815-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-servlet-9.0.5.v20130815.jar" sourcepath="lib/sources/jetty-servlet-9.0.5.v20130815-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-9.0.5.v20130815.jar" sourcepath="lib/sources/jetty-util-9.0.5.v20130815-sources.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-3.0.jar" sourcepath="lib/sources/servlet-api-3.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/swt.jar" sourcepath="lib/sources/swt-source.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-api-2.0-beta8.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-core-2.0-beta8.jar"/>
